tests/ui/pattern/unit-type-struct-pattern-mismatch-16401.stderr
error[E0308]: mismatched types
  --> $DIR/unit-type-struct-pattern-mismatch-16401.rs:10:9
   |
LL |     match () {
   |           -- this expression has type `()`
LL |         Slice { data: data, len: len } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Slice<_>`
   |
   = note: expected unit type `()`
                 found struct `Slice<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
